Fixed spacing of hire options and removed uneeded button and paragraphs

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -241,10 +241,6 @@ p.copyright {
   color: white;
 }
 
-.zeal-col {
-  padding-bottom: 25px;
-}
-
 .zeal-icon {
   display: block;
   margin: auto;
